--- a/src/components/Navigation/style.scss
+++ b/src/components/Navigation/style.scss
@@ -56,7 +56,7 @@
   }
   @include media('<=xsmall') {
     left: 20px;
-    top: 53px;
+    top: 50px;
   }
 }
 
